DW-2262 (#4)
Added Profiles to differentiate between "Test" and "KMS" backends
Tests now use a mock mvc controller
Added /ping endpoint
